--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,24 +1,9 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     box-sizing: border-box;
-}
-
-@media screen and (max-width: 1024px) {
-    .header {
-        padding: 0 48px 0 48px;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .header {
-        padding: 0 24px 0 24px;
-    }
-}
-
-@media screen and (max-width: 425px) {
-    .header {
-        padding: 0 16px 0 16px;
-    }
+    padding: 45px 0 41px 0;
+    border-bottom: 1px solid rgba(84,84,84,0.7);
+    width: 880px;
 }
