--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,8 +5,14 @@
     width: 24px;
     height: 24px;
     background-color: transparent;
-    box-sizing: border-box;
     background-image: url('../../../images/edit-button.svg');
     background-repeat: no-repeat;
-    background-position: center;   
+    background-position: center;
+    border: 1px solid #FFFFFF;
+    opacity: 1;
+    transition: opacity 0.3s linear;
+}
+
+.profile__edit-button:hover {
+    opacity: 0.6;
 }
