--- a/blocks/profile/__new-photo-button/profile__new-photo-button.css
+++ b/blocks/profile/__new-photo-button/profile__new-photo-button.css
@@ -7,4 +7,13 @@
     background-image: url('../../../images/add-button.svg');
     background-position: center;
     background-repeat: no-repeat;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
+    border-radius: 2px;
+    opacity: 1;
+    transition: opacity 0.3s linear;
+}
+
+.profile__new-photo-button:hover {
+    opacity: 0.6;
 }
