feat: стилизовать одну карточку content-galery

--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,5 +4,7 @@
     font-size: 42px;
     line-height: 48px;
     text-align: center;
-    
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
