--- a/blocks/content-gallery/__cards/content-gallery__cards.css
+++ b/blocks/content-gallery/__cards/content-gallery__cards.css
@@ -2,4 +2,7 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+    gap: 17px;
 }
