--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,5 @@
 .card__like-button {
+    padding: 0;
     width: 22px;
     height: 19px;
     background-color: transparent;
@@ -8,6 +9,7 @@
     border: none;
     opacity: 1;
     transition: opacity 0.3s linear;
+    padding-bottom: 30px;
 }
 
 .card__like-button:hover {
