--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,5 +5,5 @@
     box-sizing: border-box;
     padding: 45px 0 41px 0;
     border-bottom: 1px solid rgba(84,84,84,0.7);
-    width: 880px;
+    min-width: 320px;
 }
