--- a/blocks/profile/__new-photo-button/profile__new-photo-button.css
+++ b/blocks/profile/__new-photo-button/profile__new-photo-button.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     width: 150px;
+    min-width: 50px;
     height: 50px;
     background-color: transparent;
     background-image: url('../../../images/add-button.svg');
