feat: сделать адаптив на первом брейкпоинте

--- a/blocks/content-gallery/__cards/content-gallery__cards.css
+++ b/blocks/content-gallery/__cards/content-gallery__cards.css
@@ -6,3 +6,9 @@
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     gap: 17px;
 }
+
+@media screen and (max-width: 1135px) {
+    .content-gallery__cards {
+        gap: 20px;
+    }
+}
