--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,3 +7,9 @@
     border-bottom: 1px solid rgba(84,84,84,0.7);
     min-width: 320px;
 }
+
+@media screen and (max-width: 1135px) {
+    .header {
+        padding: 28px 0 32px 0;
+    }
+}
