--- a/blocks/content-gallery/__cards/content-gallery__cards.css
+++ b/blocks/content-gallery/__cards/content-gallery__cards.css
@@ -5,6 +5,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
     gap: 17px;
+    justify-items: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 1135px) {
