--- a/blocks/content-gallery/content-gallery.css
+++ b/blocks/content-gallery/content-gallery.css
@@ -8,3 +8,9 @@
         padding: 0 45px 48px 45px;
     }
 }
+
+@media screen and (max-width: 825px) {
+    .content-gallery {
+        padding: 0 19px 48px 19px;
+    }
+}
