--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -7,4 +7,13 @@
     white-space: nowrap;
     overflow: hidden;
     max-width: 400px;
+    text-align: start;
+}
+
+@media screen and (max-width: 825px) {
+    .profile__description {
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
+    }
 }
