--- a/blocks/profile/__name-container/profile__name-container.css
+++ b/blocks/profile/__name-container/profile__name-container.css
@@ -4,3 +4,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 825px) {
+    .profile__name-container {
+        margin: 0 0 14px 0;
+    }
+}
