--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -9,3 +9,10 @@
     overflow: hidden;
     max-width: 450px;
 }
+
+@media screen and (max-width: 825px) {
+    .profile__name {
+        font-size: 27px;
+        line-height: 33px;
+    }
+}
