--- a/blocks/profile/__new-photo-button/profile__new-photo-button.css
+++ b/blocks/profile/__new-photo-button/profile__new-photo-button.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     width: 150px;
-    min-width: 50px;
     height: 50px;
     background-color: transparent;
     background-image: url('../../../images/add-button.svg');
@@ -12,9 +11,16 @@
     box-sizing: border-box;
     border-radius: 2px;
     opacity: 1;
-    transition: opacity 0.3s linear;
+    transition: opacity .3s linear;
 }
 
 .profile__new-photo-button:hover {
-    opacity: 0.6;
+    opacity: .6;
+}
+
+@media screen and (max-width: 825px) {
+    .profile__new-photo-button {
+        width: 282px;
+        height: 50px;
+    }
 }
