--- a/blocks/profile/__person/profile__person.css
+++ b/blocks/profile/__person/profile__person.css
@@ -6,3 +6,10 @@
     justify-content: flex-start;
     align-items: center;
 }
+
+@media screen and (max-width: 825px) {
+    .profile__person {
+        padding-bottom: 36px;
+        flex-direction: column;
+    }
+}
