--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -12,3 +12,10 @@
         padding: 0 45px 36px 45px;
     }
 }
+
+@media screen and (max-width: 825px) {
+    .profile {
+        padding: 0 19px 36px 19px;
+        flex-direction: column;
+    }
+}
