--- a/blocks/edit-form/__form-container/edit-form__form-container.css
+++ b/blocks/edit-form/__form-container/edit-form__form-container.css
@@ -4,6 +4,7 @@
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     max-width: 430px;
+    min-width: 282px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -14,4 +15,10 @@
     list-style: none;
     box-sizing: border-box;
     padding: 34px 36px 37px 36px;
+}
+
+@media screen and (max-width: 600px) {
+    .edit-form__form-container {
+        padding: 25px 22px 25px 22px;
+    }
 }
