--- a/blocks/edit-form/__submit-button/edit-form__submit-button.css
+++ b/blocks/edit-form/__submit-button/edit-form__submit-button.css
@@ -10,3 +10,10 @@
     text-align: center;
     padding: 14px 0 18px 0;
 }
+
+@media screen and (max-width: 600px) {
+    .edit-form__submit-button {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
