--- a/blocks/edit-form/__submit-button/edit-form__submit-button.css
+++ b/blocks/edit-form/__submit-button/edit-form__submit-button.css
@@ -9,6 +9,13 @@
     line-height: 22px;
     text-align: center;
     padding: 14px 0 18px 0;
+    border-radius: 2px;
+    opacity: 1;
+    transition: opacity .3s linear;
+}
+
+.edit-form__submit-button:hover {
+    opacity: .8;
 }
 
 @media screen and (max-width: 600px) {
