--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -1,5 +1,5 @@
 .edit-form {
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     flex-direction: column;
