fix: исправить переполнение имени юзера и описания в моб.версии

--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -17,3 +17,11 @@
         text-align: center;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .profile__description {
+        font-size: 14px;
+        line-height: 17px;
+        max-width: 240px;
+    }
+}
