--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -16,3 +16,9 @@
         line-height: 33px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .profile__name {
+        max-width: 250px;
+    }
+}
