--- a/blocks/edit-form/__profile-description/edit-form__profile-description.css
+++ b/blocks/edit-form/__profile-description/edit-form__profile-description.css
@@ -3,6 +3,7 @@
     border-bottom: 1px solid rgba(0,0,0,.2);
     outline: none;
     margin: 0 0 48px 0;
+    padding: 0;
     padding-bottom: 13px;
     font-weight: normal;
     font-size: 14px;
