fix: исправить крестик на 320 добавление фото

--- a/blocks/profile/__new-photo-button/profile__new-photo-button.css
+++ b/blocks/profile/__new-photo-button/profile__new-photo-button.css
@@ -24,3 +24,9 @@
         height: 50px;
     }
 }
+
+@media screen and (max-width: 600px) {
+    .profile__new-photo-button {
+        background-image: url('../../../images/add-button-mobile.svg');
+    }
+}
