--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -4,3 +4,9 @@
     display: flex;
     flex-direction: column;
 }
+
+@media screen and (max-width: 600px) {
+    .profile__info {
+        align-items: center;
+    }
+}
