--- a/pages/index.css
+++ b/pages/index.css
@@ -33,3 +33,8 @@
 @import url(../blocks/edit-form/__form-description/edit-form__form-description.css);
 @import url(../blocks/edit-form/__profile-info-input/edit-form__profile-name.css);
 @import url(../blocks/edit-form/__submit-button/edit-form__submit-button.css);
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/__container/image-popup__container.css);
+@import url(../blocks/image-popup/__close-button/image-popup__close-button.css);
+@import url(../blocks/image-popup/__description/image-popup__description.css);
+@import url(../blocks/image-popup/__picture/image-popup__picture.css);
