--- a/pages/index.css
+++ b/pages/index.css
@@ -38,3 +38,4 @@
 @import url(../blocks/image-popup/__description/image-popup__description.css);
 @import url(../blocks/image-popup/__picture/image-popup__picture.css);
 @import url(../blocks/card/__like-button/_status/card__like-button_status_active.css);
+@import url(../blocks/image-popup/_status_active/image-popup_status_active.css);
