--- a/blocks/edit-form/edit-form.css
+++ b/blocks/edit-form/edit-form.css
@@ -1,13 +1,15 @@
 .edit-form {
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  opacity: 0;
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0,0,0,.5);
+  transition: opacity .8s, visibility .8s linear;
   padding: 0 19px 0 19px;
 }
