--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -1,5 +1,5 @@
 .image-popup {
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -11,4 +11,7 @@
   bottom: 0;
   right: 0;
   background-color: rgba(0,0,0,.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .8s, visibility .8s linear;
 }
