--- a/pages/index.css
+++ b/pages/index.css
@@ -44,3 +44,4 @@
 @import url(../blocks/image-popup/_status/image-popup_status_active.css);
 @import url(../blocks/edit-form/__info-input/_error/edit-form__info-input_error.css);
 @import url(../blocks/edit-form/__error-text/_active/edit-form__error-text_active.css);
+@import url(../blocks/edit-form/__submit-button/_disabled/edit-form__submit-button_disabled.css);
