feat: сделать оверлей на аватаре профиля

--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,14 @@
 .profile__avatar {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
   width: 120px;
   height: 120px;
-  object-fit: cover;
   border-radius: 50%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: url('../../../images/avatar.jpg');
 }
 
 @media screen and (max-width: 825px) {
