--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -21,6 +21,8 @@
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__info/card__info.css);
 @import url(../blocks/card/__descriotion/card__description.css);
+@import url(../blocks/card/__like-container/card__like-container.css);
+@import url(../blocks/card/__like-counter/card__like-counter.css);
 @import url(../blocks/card/__like-button/card__like-button.css);
 @import url(../blocks/card/__delete-button/card__delete-button.css);
 @import url(../blocks/card/__photo/card__photo.css);
